# Diffuse-Parallel-Programming

JavaMultiThread/src/: Main.java  ParallelCalculator.java  Receiver.java  SampleData.java
MPI/: CMakeLists.txt  MPIEnigmaBreaker.cpp  MPIEnigmaBreaker.h  Main.cpp  SimpleMessageComparator.cpp
OpenMP/: SimpleMinimization.cpp  SimpleMinimization.h  main.cpp
RMI/src/: Main.java  ReservationSystem.java
